--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
     defaultConfig {
-        applicationId "org.wit.placemark"
+        applicationId 'org.wit.finance'
         minSdkVersion 29
         targetSdkVersion 30
         versionCode 1
